prevent wrap of social media icons.

--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -50,7 +50,7 @@
 
     li {
       display: inline-block;
-      margin-left: 2.5rem;
+      margin-left: 2rem;
 
       img {
         height: 6rem;
